# quizzos

./: .gitignore  README.md  docker-compose.yml
apipy/: Dockerfile  requirements.txt
apipy/apipy/: main.py
apipy/apipy/routers/: items.py  user.py
apipy/tests/: test_main.py
apirust/: Dockerfile
apirust/apirust/: Cargo.toml
apirust/apirust/src/: main.rs
apirust/apirust/src/items/: items.rs
apirust/apirust/src/user/: user.rs
frontend/: Dockerfile  package.json
frontend/quizzos/src/: App.tsx  Header.tsx  ItemsList.tsx  Login.tsx
