[package]
name = "apirust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
actix-web-httpauth="0.5.1"

[dev-dependencies]
actix-rt = "2.1.0"